--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ footer{
 
 .footer-distributed .footer-right{
   float: right;
-  margin-top: px;
+  margin-top: 20px;
   max-width: 180px;
   padding-right: 75px;
 }
